@@ -9,7 +9,8 @@ Require-Bundle: org.eclipse.ui,
  org.eclipse.core.runtime
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
 Bundle-ActivationPolicy: lazy
-Import-Package: org.eclipse.cdt.debug.ui,
+Import-Package: org.eclipse.cdt.debug.core,
+ org.eclipse.cdt.debug.ui,
  org.eclipse.cdt.launch.remote,
  org.eclipse.cdt.launch.ui,
  org.eclipse.debug.core,
