@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/l10n/bundle.properties,\
-               about.html
+               about.html,\
+               icons/
