@@ -19,7 +19,7 @@ import org.osgi.framework.BundleContext;
 public class ProfileRemoteLaunchPlugin extends AbstractUIPlugin {
 
 	// The plug-in ID
-	public static final String PLUGIN_ID = "org.eclipse.linuxtools.internal.profiling.launch.remote"; //$NON-NLS-1$
+	public static final String PLUGIN_ID = "org.eclipse.linuxtools.profiling.launch.remote"; //$NON-NLS-1$
 
 	// The shared instance
 	private static ProfileRemoteLaunchPlugin plugin;
